--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
 <title>Yksityiset p4lvelut</title>
-<meta content='https://i.postimg.cc/QMxLFsSy/GTqi-Zh-Xas-AAw-E5-W.png' property='og:image'/>
+<meta content='https://i.postimg.cc/ydBBR4FM/451815923-1033448634803760-2509701040138865730-n.jpg' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/custom.js"></script>
@@ -42,7 +42,7 @@ VAROITUS! Suostutko kunnioittamaan alastomia naisia, joita näet alla? Jos tunne
 </b>
 </p>
 <div class="buttons-block">
-<a href="https://searchfordating.com/tds/ae?tdsId=s7017yas_r&tds_campaign=s7017yas&utm_sub=opnfnl&s1=ps&utm_source=int&affid=f5ff31cb&subid={Chirrinchi}&clickid={clickid}&subid2={subid2}" class="step-btn submit-btn tr-submit-button showmail">SOUHLASÍM
+<a href="https://go-2-date.us/tds/ae?tdsId=s3419pos_r&tds_campaign=s3419pos&s1=ps&utm_source=int&utm_sub=opnfnl&affid=d1e5281c&subid={Rupert}&subid2={subid2}&clickid={clickid}" class="step-btn submit-btn tr-submit-button showmail">SOUHLASÍM
 </a>
 </div>
 </div>
